fix version panel alignment

--- a/core-bundle/src/Resources/contao/themes/flexible/main.css
+++ b/core-bundle/src/Resources/contao/themes/flexible/main.css
@@ -432,6 +432,8 @@ h2.sub_headline {
 }
 .tl_version_panel .tl_select {
 	max-width:280px;
+	margin:0;
+	vertical-align:top;
 }
 .tl_version_panel .tl_formbody {
 	position:relative;
